// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete preview image 1`] = `
<div class="zv-uploader">
  <div class="zv-uploader__wrapper">
    <div class="zv-uploader__upload" style="width: 30px; height: 30px;"><i class="zv-icon zv-icon-photograph zv-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="zv-uploader__input"></div>
  </div>
</div>
`;

exports[`disable preview image 1`] = `
<div class="zv-uploader">
  <div class="zv-uploader__wrapper">
    <div class="zv-uploader__upload"><i class="zv-icon zv-icon-photograph zv-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="zv-uploader__input"></div>
  </div>
</div>
`;

exports[`image-fit prop 1`] = `
<div class="zv-uploader">
  <div class="zv-uploader__wrapper">
    <div class="zv-uploader__preview">
      <div class="zv-image zv-uploader__preview-image"><img src="https://img.yzcdn.cn/vant/cat.jpeg" class="zv-image__img" style="object-fit: contain;">
        <div class="zv-image__loading"><i class="zv-icon zv-icon-photo-o zv-image__loading-icon">
            <!----></i></div>
      </div><i class="zv-icon zv-icon-clear zv-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="zv-uploader__upload"><i class="zv-icon zv-icon-photograph zv-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="zv-uploader__input"></div>
  </div>
</div>
`;

exports[`max-count prop 1`] = `
<div class="zv-uploader">
  <div class="zv-uploader__wrapper">
    <div class="zv-uploader__preview">
      <div class="zv-image zv-uploader__preview-image"><img src="data:image/test" class="zv-image__img" style="object-fit: cover;">
        <div class="zv-image__loading"><i class="zv-icon zv-icon-photo-o zv-image__loading-icon">
            <!----></i></div>
      </div><i class="zv-icon zv-icon-clear zv-uploader__preview-delete">
        <!----></i>
    </div>
  </div>
</div>
`;

exports[`preview-size prop 1`] = `
<div class="zv-uploader">
  <div class="zv-uploader__wrapper">
    <div class="zv-uploader__preview" style="">
      <div class="zv-image zv-uploader__preview-image" style="width: 30px; height: 30px;"><img src="data:image/test" class="zv-image__img" style="object-fit: cover;">
        <div class="zv-image__loading"><i class="zv-icon zv-icon-photo-o zv-image__loading-icon">
            <!----></i></div>
      </div><i class="zv-icon zv-icon-clear zv-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="zv-uploader__upload" style="width: 30px; height: 30px;"><i class="zv-icon zv-icon-photograph zv-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="zv-uploader__input"></div>
  </div>
</div>
`;

exports[`render preview image 1`] = `
<div class="zv-uploader">
  <div class="zv-uploader__wrapper">
    <div class="zv-uploader__preview">
      <div class="zv-image zv-uploader__preview-image"><img src="https://img.yzcdn.cn/vant/cat.jpeg" class="zv-image__img" style="object-fit: cover;">
        <div class="zv-image__loading"><i class="zv-icon zv-icon-photo-o zv-image__loading-icon">
            <!----></i></div>
      </div><i class="zv-icon zv-icon-clear zv-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="zv-uploader__preview">
      <div class="zv-uploader__file"><i class="zv-icon zv-icon-description zv-uploader__file-icon">
          <!----></i>
        <div class="zv-uploader__file-name zv-ellipsis">https://img.yzcdn.cn/vant/test.pdf</div>
      </div><i class="zv-icon zv-icon-clear zv-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="zv-uploader__preview">
      <div class="zv-uploader__file"><i class="zv-icon zv-icon-description zv-uploader__file-icon">
          <!----></i>
        <div class="zv-uploader__file-name zv-ellipsis">test.pdf</div>
      </div><i class="zv-icon zv-icon-clear zv-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="zv-uploader__preview">
      <div class="zv-image zv-uploader__preview-image"><img src="data:image/test" class="zv-image__img" style="object-fit: cover;">
        <div class="zv-image__loading"><i class="zv-icon zv-icon-photo-o zv-image__loading-icon">
            <!----></i></div>
      </div><i class="zv-icon zv-icon-clear zv-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="zv-uploader__upload"><i class="zv-icon zv-icon-photograph zv-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="zv-uploader__input"></div>
  </div>
</div>
`;

exports[`render upload-text 1`] = `
<div class="zv-uploader">
  <div class="zv-uploader__wrapper">
    <div class="zv-uploader__upload"><i class="zv-icon zv-icon-photograph zv-uploader__upload-icon">
        <!----></i><span class="zv-uploader__upload-text">Text</span><input type="file" accept="image/*" class="zv-uploader__input"></div>
  </div>
</div>
`;

exports[`upload-icon prop 1`] = `
<div class="zv-uploader">
  <div class="zv-uploader__wrapper">
    <div class="zv-uploader__upload"><i class="zv-icon zv-icon-add zv-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="zv-uploader__input"></div>
  </div>
</div>
`;
